manifests/frontend.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: baselabouelnour/nginx:port-test
        name: nginx
      resources:
        limits:
          cpu: "0.5"
          memory: "500Mi"
