manifests/order.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - image: baselabouelnour/port-test
        name: port-test
      resources:
        limits:
          cpu: "0.5"
          memory: "500Mi"
