manifests/product.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - image: baselabouelnour/port-test
        name: port-test
      resources:
        limits:
          cpu: "0.5"
          memory: "500Mi"
