manifests/db.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
  - name: 27017-27017
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: db
  type: ClusterIP
