manifests/product.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: product
  type: ClusterIP
